tests/fail/level_macro_with_supplied_level.rs
#[log_attributes::info(trace, "{fn} was called")]
fn level_macro_with_supplied_level() {}

fn main() {}
